# Unified-Momentum-Model

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pytest.yml
UnifiedMomentumModel/: Momentum.py  Utilities.py
UnifiedMomentumModel/Pressure/: ADPressure.py  PressureSolver.py  PressureTable.py
UnifiedMomentumModel/PressureSolver/: ADPressureField.py  PressureSolver.py  poisson_pressure_linear.py  poisson_pressure_nonlinear.py
UnifiedMomentumModel/Utilities/: ArgTools.py  Calculus.py  FixedPointIteration.py  Geometry.py  Other.py
examples/: example_01_classical_vs_unified.py  example_02_nonlinear_pressure.py  example_03_ThrustBasedUnified.py  howland_lab_group_presentation.ipynb
figures/: figure_01_axis.ipynb  figure_01_streamplots.ipynb  figure_02_03.ipynb  figure_04_power_contour.ipynb  figure_06.ipynb  key_numbers.ipynb  supplement_pressure.ipynb  supplement_sensitivity.ipynb  supplement_steiros.ipynb  supplement_x0.ipynb  suppliment_pressure.ipynb  suppliment_sensitivity.ipynb  suppliment_steiros.ipynb  suppliment_x0.ipynb
figures/LES_data/: Cp_les_contour_data.mat  LES_fields.mat  LES_streamtube_data.mat  ct_data_les_ct_input.txt  ct_data_les_ct_input_negativeCt.txt  ct_data_les_ctp_input.txt  ct_data_les_tony.txt  fig6_ABL_data.csv  fig6_uniform_data.csv
tests/: test_geometry.py  test_momentum.py  test_pressure.py
