[tool.poetry]
name = "unified-momentum-model"
version = "0.3.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "UnifiedMomentumModel"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.16"
scipy = ">=1.6"
matplotlib = ">=3.6"
tqdm = "^4.66.1"
polars = "^0.19.13"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
dualitic = {git = "https://github.com/jaimeliew1/Dualitic.git", optional = true}


[tool.poetry.extras]
autodiff = ["dualitic"]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipython = ">=7"
black = {extras = ["jupyter"], version = "^23.9.1"}
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
