[tool.poetry]
name = "unified-momentum-model"
version = "0.3.0"
description = ""
authors = ["Jaime Liew <jaimeliew1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "UnifiedMomentumModel" }]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.16"
scipy = ">=1.6"
tqdm = "^4.66.1"
polars = "^0.19.13"
matplotlib = { version = ">=3.6", optional = true }
jupyter = { version = "^1.0.0", optional = true }
ipykernel = { version = "^6.26.0", optional = true }
dualitic = { git = "https://github.com/jaimeliew1/Dualitic.git", optional = true }
foreach = "^0.4.0"


[tool.poetry.extras]
autodiff = ["dualitic"]
examples = ["matplotlib"]
figures = ["matplotlib", "jupyter", "ipykernel", "dualitic"]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ipython = ">=7"
black = { extras = ["jupyter"], version = "^23.9.1" }
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
